--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",   
+    "dev": "nodemon src/server.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "format": "prettier --write .",
@@ -55,6 +55,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.0.1",
     "mongodb": "^6.15.0",
