added environment validation and graceful error handling

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,25 @@
-MONGO_URI=mongodb+srv://<username>:<password>@<cluster_name>.wncfx.mongodb.net/<database_name>?retryWrites=true&w=majority&appName=Cluster0
-NODE_ENV=production
+# Database configuration
+MONGO_URI=mongodb+srv://<username>:<password>@<cluster_name>.mongodb.net/<database_name>?retryWrites=true&w=majority
+
+# Environment
+NODE_ENV=<development|test|production>
 PORT=3000
-SESSION_SECRET=$(openssl rand -hex 32)
-GITHUB_CLIENT_ID=<client_id>
-GITHUB_CLIENT_SECRET=<client_secret>
-CALLBACK_URL=https://<domain_name>/auth/github/callback
-RENDER_EXTERNAL_HOSTNAME=https://<domain_name>
+
+# Session & Authentication
+SESSION_SECRET=<your_session_secret>
+JWT_SECRET=<your_jwt_secret>
+JWT_EXPIRES_IN=<expiration_time>
+
+# OAuth Providers
+GITHUB_CLIENT_ID=<your_github_client_id>
+GITHUB_CLIENT_SECRET=<your_github_client_secret>
+GITHUB_CALLBACK_URL=<your_callback_url>
+
+# External Hosting (for production)
+RENDER_EXTERNAL_HOSTNAME=<your_production_url>
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX=100
+AUTH_RATE_LIMIT_WINDOW_MS=60000
+AUTH_RATE_LIMIT_MAX=5
