--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.0.3",
     "passport": "^0.7.0",
