--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX=100
 AUTH_RATE_LIMIT_WINDOW_MS=60000
 AUTH_RATE_LIMIT_MAX=5
+
+# Token Security
+USE_TOKEN_BLACKLIST=<true|false>
