--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:user": "jest __tests__/models/user.model.test.js",
-    "test:user:watch": "jest --watch __tests__/models/user.model.test.js"
+    "test:user:watch": "jest --watch __tests__/models/user.model.test.js",
+    "start:prod": "cross-env NODE_ENV=production node src/server.js",
+    "start:prod:win": "set NODE_ENV=production && node src/server.js"
   },
   "keywords": [
     "inventory",
@@ -69,6 +71,7 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^10.1.1",
     "jest": "^29.7.0",
