--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,9 @@ AUTH_RATE_LIMIT_MAX=5
 
 # Token Security
 USE_TOKEN_BLACKLIST=<true|false>
+
+# Superadmin Initialization
+SUPERADMIN_EMAIL=<superadmin_email>
+SUPERADMIN_PASSWORD=<strong_password>
+SUPERADMIN_USERNAME=<superadmin_username>
+SUPERADMIN_NAME=<superadmin_full_name>
